# bugWorldAscii

./: AbstractGame.cpp  AbstractGame.h  BoardedDoor.cpp  BoardedDoor.h  BugDemo.cpp  BugDemo.h  CMakeLists.txt  Chest.cpp  Chest.h  Door.cpp  Door.h  Furniture.cpp  Furniture.h  LockedDoor.cpp  LockedDoor.h  README.md  Room.cpp  Room.h  TestGame.cpp  TestGame.h  Thing.cpp  Thing.h  gameDictionary.h  main.cpp  printImage.cpp  printImage.h  textFormater.cpp  textFormater.h
ascii images/: blueRoom.txt  redRoom.txt
